# camera-optics

./: .gitignore  .pre-commit-config.yaml  .prettierignore  FRONTEND_ARCHITECTURE.md  README.md  flake.nix  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  deploy-docs.yml  release.yml  reusable-build-docs.yml  reusable-deploy-docs.yml
docs/: book.toml  tsconfig.json  version-switcher.ts
docs/src/: README.md  SUMMARY.md
docs/src/development/: TESTING.md  building.md  contributing.md  testing.md
docs/src/reference/: api.md  fov-parameters.md
docs/src/user-guide/: cli.md  comparison.md  gui.md  optics-guide.md  quick-start.md
src/: api.ts  constants.ts  form.ts  main.ts  results.ts  store.ts  styles.css  types.ts  visualization.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  cli_commands.rs  gui_commands.rs  lib.rs
src-tauri/src/images/: downsample.rs  mod.rs  types.rs
src-tauri/src/optics/: calculations.rs  commands.rs  constants.rs  mod.rs  types.rs
src/core/: constants.ts  index.ts  settings.ts  types.ts
src/services/: api.ts  index.ts  store.test.ts  store.ts
src/ui/: doriDesigner.ts  form.ts  imagePreview.ts  index.ts  modals.ts  results.ts  toast.ts  visualization.ts
